chore: update e2e-tests and switch dependencies, update switch README